test_src/compiler_errors/types/boolean/LessThanBoolError2.b
class LessThanBoolError2 {
    void test() {
        println(true < 2);
    }
}
